--- a/source/index.html
+++ b/source/index.html
@@ -762,11 +762,124 @@
             </div>
           </li>
         </ul>
+        <button class="tru-story__next" type="button"></button>
       </section>
+      <section class="learn-more">
+        <h2 class="learn-more__title">Learn more</h2>
+        <div class="learn-more__content">
+          <div class="learn-more__info">
+            <h2 class="learn-more__content-title">Our ideas</h2>
+            <p>
+              Eget est lorem ipsum dolor sit amet consectetur. Molestie at elementum eu facilisis sed odio morbi quis commodo. Nunc sed id semper risus in hendrerit.
+            </p>
+            <p>
+              Non pulvinar neque laoreet suspendisse. Sit amet commodo nulla facilisi nullam vehicula ipsum. At ultrices mi tempus imperdiet nulla malesuada pellentesque elit.
+            </p>
+            <p>
+              Amet dictum sit amet justo donec enim. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Enim sed faucibus turpis in eu mi bibendum.
+            </p>
 
+            <a class="learn-more__register-btn" href="">Register</a>
+          </div>
+
+
+          <div class="learn-more__video">
+            <img src="img/video.jpg" width="906" height="604" alt="Видео">
+            <button class="learn-more__video-play" type="button"></button>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer>
+    <footer class="footer">
+      <div class="footer__content">
+        <img class="footer__logo" src="img/logo.svg" width="67" height="44" alt="LoveMe">
+        <nav class="footer__nav footer-navigation">
+          <ul class="footer-navigation__list">
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="">Home</a>
+            </li>
 
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="">Vacancies</a>
+            </li>
+
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="">Beauteful girls</a>
+              <ul class="footer-navigation__sublist">
+                <li>
+                  <a class="footer-navigation__link footer-navigation__link--sub" href="">Girls on-line</a>
+                </li>
+                <li>
+                  <a class="footer-navigation__link footer-navigation__link--sub" href="">New girls</a>
+                </li>
+                <li>
+                  <a class="footer-navigation__link footer-navigation__link--sub" href="">Girls from Russa</a>
+                </li>
+                <li>
+                  <a class="footer-navigation__link footer-navigation__link--sub" href="">Girls from USA</a>
+                </li>
+                <li>
+                  <a class="footer-navigation__link footer-navigation__link--sub" href="">Girls from China</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="">Why choose us</a>
+              <ul class="footer-navigation__sublist">
+                <li>
+                  <a class="footer-navigation__link footer-navigation__link--sub" href="">About us</a>
+                </li>
+                <li>
+                  <a class="footer-navigation__link footer-navigation__link--sub" href="">Blog</a>
+                </li>
+                <li>
+                  <a class="footer-navigation__link footer-navigation__link--sub" href="">Our love stories</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="">Services</a>
+              <ul class="footer-navigation__sublist">
+                <li>
+                  <a class="footer-navigation__link footer-navigation__link--sub" href="">Our prices</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__social">
+          <p class="footer__social-title">Follow me</p>
+          <ul class="footer__social-list">
+            <li>
+              <a href="">
+                <img src="img/fb.png" width="37" height="37" align="LoveMe in Facebook">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="img/inst.png" width="37" height="37" align="LoveMe in Instagram">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="img/vk.png" width="37" height="37" align="LoveMe in VKontakte">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="img/tw.png" width="37" height="37" align="LoveMe in Twitter">
+              </a>
+            </li>
+          </ul>
+        </div>
+        <p class="footer__copyright">©2020</p>
+      </div>
     </footer>
   </body>
 </html>
