--- a/source/service.html
+++ b/source/service.html
@@ -159,7 +159,7 @@
             </li>
           </ul>
         </div>
-        <form class="serveces__form register register--services">
+        <form class="register register--full-width">
           <h2 class="register__title">First time with us?</h2>
           <p class="register__description">Sign up and become part of our team, we will help you find your love </p>
           <div class="register__wrapper">
@@ -194,7 +194,6 @@
             </label>
             <button class="register__submit" type="submit">Register</button>
           </div>
-
         </form>
       </section>
     </main>
