--- a/source/faq.html
+++ b/source/faq.html
@@ -71,7 +71,7 @@
             <li class="faq__item faq__item--active">
               <ul class="faq__item-list">
                 <li>
-                  <h4>How can I be sure that ladies are serious on your website?</h4>
+                  <h4 class="faq__category">How can I be sure that ladies are serious on your website?</h4>
                   <ul class="faq__item-subtitle">
                     <li>
                       ladies pay to be our agency. This is actually unique step for marriage agencies in former USSR – still we decided to take this step, just because we want only seriously motivated ladies.
@@ -85,10 +85,10 @@
                   </p>
                 </li>
                 <li>
-                  <h4>I never used your services before, how can I trust your agency?</h4>
+                  <h4 class="faq__category">I never used your services before, how can I trust your agency?</h4>
                 </li>
                 <li>
-                  <h4>What is your agency success rate?</h4>
+                  <h4 class="faq__category">What is your agency success rate?</h4>
                 </li>
               </ul>
             </li>
